map implemented using PointStore

--- a/map.html
+++ b/map.html
@@ -6,34 +6,24 @@
     
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
     <script type="text/javascript" src="js/map.js"></script>
+    <script src="js/jquery-1.8.0.min.js"></script>
+    <script src="js/PointStore.js"></script>
+    <!--<script type="text/javascript" src="js/PointStore-spec.js"></script> -->
     <link type="text/css" rel="stylesheet" media="all" href="css/mapstyle.css" />
+
 
   </head>
   <body>
     <div id="container">
-        <table>
-          <tr>
-            <td>
-            <div id="filterEntities">
-              <form id="entityFilter">
-                  <label for="filterEntities">Filter Entities:</label>
-                  <input type="text" name="filterEntities" id="entity"/>
-                  <input type="submit" id="entitybutton" value="Go!" />
-              </form>
-            </div>
-            <td>
-            <td>
+
               <div id="filterTags">
-                <form id="tagFilter">
+
                     <label for="filterTags">Filter Tags:</label>
                     <input type="text" name="filterTags" id="tag"/>
                     <input type="submit" id="tagbutton" value="Go!" />
-                </form>
-              </div>
-            </td>
 
-          </tr>
-        </table>
+              </div>
+
 
           <div id="map">
           </div>
