make PointStore use List.js for internal list management
This will allow us to use the fuzzy search facility.  Note that
to get this to work while preserving the existing PointStore
functionality, I had to add a [terribly inefficient] function to
List.js to get the list of current values.

--- a/PointStore-test.html
+++ b/PointStore-test.html
@@ -11,6 +11,8 @@
         <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
 
         <script src="js/jquery-1.8.0.min.js"></script>
+        <script src="js/list.js"></script>
+        <script src="js/list.fuzzySearch.js"></script>
         <script src="js/PointStore.js"></script>
         <script type="text/javascript" src="js/PointStore-spec.js"></script>
 
@@ -44,5 +46,9 @@
         </script>
     </head>
 <body>
+    <div id="point-store-list">
+        <ul class="list">
+        </ul>
+    </div>
 </body>
 </html>
