--- a/map.html
+++ b/map.html
@@ -7,6 +7,8 @@
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
     <script type="text/javascript" src="js/map.js"></script>
     <script src="js/jquery-1.8.0.min.js"></script>
+    <script src="js/list.js"></script>
+    <script src="js/list.fuzzySearch.js"></script>
     <script src="js/PointStore.js"></script>
     <!--<script type="text/javascript" src="js/PointStore-spec.js"></script> -->
     <link type="text/css" rel="stylesheet" media="all" href="css/mapstyle.css" />
