--- a/map.html
+++ b/map.html
@@ -25,6 +25,11 @@
                     <input type="submit" id="tagbutton" value="Go!" />
 
               </div>
+              <div id="point-store-list">
+                  <ul class="list">
+                  </ul>
+              </div>
+
 
 
           <div id="map">
