--- a/map.html
+++ b/map.html
@@ -10,6 +10,8 @@
     <script src="js/list.js"></script>
     <script src="js/list.fuzzySearch.js"></script>
     <script src="js/PointStore.js"></script>
+    <script src="js/jquery-1.8.1.min.js"></script>
+    <script src="js/jquery-ui-1.8.23.min.js"></script>
     <!--<script type="text/javascript" src="js/PointStore-spec.js"></script> -->
     <link type="text/css" rel="stylesheet" media="all" href="css/mapstyle.css" />
 
