shout out to openstreetmap as required by license

--- a/map.html
+++ b/map.html
@@ -38,4 +38,6 @@
 
           <div id="map">
           </div>
+          <h3>Some map point data <a href="http://www.openstreetmap.org/copyright">Copyright OpenStreetMap contributors</a> CC BY SA</h3>
+    </div>
   </body>
